[gd_scene load_steps=4 format=1]

[ext_resource path="res://Scripts/spaceship.gd" type="Script" id=1]
[ext_resource path="res://Textures/spaceship.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 8.4943

[node name="spaceship" type="Area2D"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 16.7208, -7.79704, 3.78059, 8.1075, -10, -10 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )

[node name="spaceship_sprite" type="Sprite" parent="."]

transform/rot = 25.0
transform/scale = Vector2( 4, 4 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/pos = Vector2( -10, -10 )
transform/rot = 25.0
transform/scale = Vector2( 18.4494, 8.94563 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="area_enter_shape" from="." to="." method="_on_spaceship_area_enter_shape"]

[connection signal="body_enter" from="." to="." method="_on_spaceship_body_enter"]

[connection signal="body_exit" from="." to="." method="_on_spaceship_body_exit"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


